# updsts

./: .gitignore  LICENSE  README.md  README_ja.md  pyproject.toml  pytest.ini
src/updsts/: __init__.py  __main__.py  awsutil.py  cmd_handler.py  cmdparam.py  logutil.py  mcp_impl.py  mcp_server.py  upcred.py
test/: README.md  __init__.py  conftest.py  run_all_tests.py  run_pytest.py  test_awsutil.py  test_cmd_handler.py  test_integration.py  test_main.py  test_upcred.py
