[project]
name = "updsts"
version = "0.8.6"
description = "Get and update AWS STS credential using existing AWS profile."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.39",
    "fastmcp>=2.12.4",
    "pydantic>=2.11.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
updsts = "updsts.__main__:main"

[dependency-groups]
dev = [
    "debugpy>=1.8.17",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test/*",
    "*/__pycache__/*",
    "*/tmp/*",
    "*/venv/*",
    "*/.venv/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
precision = 2
show_missing = true

[tool.coverage.html]
directory = "test/tmp/htmlcov"

[tool.coverage.xml]
output = "test/tmp/coverage.xml"
